# comic-prompt-gen

./: README-EN.md  README.md  pyproject.toml  requirements.txt  tatus
.cursor/rules/: numpy-best-practices.mdc  pydantic-best-practices.mdc  ruff-best-practices.mdc  streamlit-best-practices.mdc
src/: app.py  main.py
src/comic_prompt_gen/: __init__.py  app.py
src/comic_prompt_gen/core/: __init__.py  models.py  prompt_generator.py
src/comic_prompt_gen/storage/: __init__.py  prompt_storage.py
src/comic_prompt_gen/ui/: header.py  prompt_display.py  reference_sidebar.py  story_form.py
src/comic_prompt_gen/utils/: __init__.py  reference_images.py  translations.py
